fix some dark mode styles, alert log fix

--- a/client-vue/src/assets/_darkmode.scss
+++ b/client-vue/src/assets/_darkmode.scss
@@ -114,7 +114,7 @@
             border-color: #777;
             background-color: #353535;
         }
-        &[type=range] {
+        &[type="range"] {
             background-color: #444;
         }
     }
@@ -127,20 +127,23 @@
 
     .log_viewer {
         color: #888;
-        &.log-line-success {
-            color: #5bd250;
-        }
-        &.log-line-fatal {
-            color: #ff0000;
-        }
-        &.log-line-warning {
-            color: #ff7300;
-        }
-        &.log-line-error {
-            color: #db4d4d;
-        }
-        &.log-line-debug {
-            color: #9c9c9c;
+        .log-line {
+            color: #6f6f6f;
+            &.log-line-success {
+                color: #5bd250;
+            }
+            &.log-line-fatal {
+                color: #ff0000;
+            }
+            &.log-line-warning {
+                color: #ff7300;
+            }
+            &.log-line-error {
+                color: #db4d4d;
+            }
+            &.log-line-debug {
+                color: #9c9c9c;
+            }
         }
     }
 
@@ -157,6 +160,4 @@
     .input-help {
         color: #bbb;
     }
-    
-
 }
